language_tests/source_files/invalid/result_map_requires_error_copy.tr
struct NonCopyError {
    code: int32
}

func main() {
    let r: Result[int32, NonCopyError] = .err(NonCopyError { code: 1 })
    let _ = r.map(|x| -> int32 { x + 1 })
}
